feat(mcq): rebuild Q40/Q41 в multi-line формате в java-17-21-interview.md
- Q40 (Record Patterns) — correct=B, разбор type test + деструктуризация одновременно, nested patterns, var patterns, unnamed pattern _, ограничения (только record-like классы)
- Q41 (String Templates) — correct=B, разбор fragments/values API, как кастомный SQL processor предотвращает injection через PreparedStatement, статус preview/отзыв из Java 23

Восстановлены ## Q41 и ## Q42 заголовки. Осталось 1 corrupted блок (Q42 + final stray в See also).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>